# zipper

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  Makefile  README.md  appveyor.yml  zipper.pc.cmakein  zipper.sln  zipperConfig.cmake.in
.github/workflows/: ci.yaml  ci.yaml.todo  ci.yml  mingw64.yml
.integration/: appveyor-install-window.sh  appveyor-launch_tests.sh  travis-deploy.sh  travis-install-linux.sh  travis-install-osx.sh  travis-launch_tests.sh
doc/Examples/: Example.cpp  Test1.txt  Test2.txt
include/Zipper/: Unzipper.hpp  Zipper.hpp
src/: Unzipper.cpp  Zipper.cpp
src/utils/: OS.hpp  Path.cpp  Path.hpp  Timestamp.cpp  Timestamp.hpp  dirent.c  dirent.h
test/: catch.hpp  file_zip_test.cpp  memory_zip_test.cpp  test.vcxproj  test.vcxproj.filters  test_zip.cpp
tests/: Makefile  TestDir.cpp  TestPath.cpp  TestZip.cpp  build.sh  main.cpp
zipper/: CDirEntry.cpp  CDirEntry.h  CLocaleString.cpp  CLocaleString.h  Timestamp.h  defs.h  tools.cpp  tools.h  tools.hpp  unzipper.cpp  unzipper.h  zipper.cpp  zipper.h  zipper.vcxproj  zipper.vcxproj.filters
zipper/tps/: dirent.c  dirent.h
